[gd_scene load_steps=25 format=3 uid="uid://nnjkpa1rm758"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_1j54n"]
[ext_resource type="PackedScene" uid="uid://b0wysm6c2nqgj" path="res://scenes/Characters/player.tscn" id="2_ia34y"]
[ext_resource type="Script" path="res://scripts/CurrentMemory.gd" id="2_sijgh"]
[ext_resource type="Texture2D" uid="uid://cibcntstf71xs" path="res://assets/sokoban_tilesheet.png" id="3_nuk7a"]
[ext_resource type="Script" path="res://scripts/Characters/Characters.gd" id="3_tye71"]
[ext_resource type="PackedScene" uid="uid://bad5nytk5iv33" path="res://scenes/Characters/shadow.tscn" id="4_sx2i0"]
[ext_resource type="AudioStream" uid="uid://dypqcaajjr6b4" path="res://sounds/music/Atmosphere music.ogg" id="6_4f632"]
[ext_resource type="Texture2D" uid="uid://cgwkjpok67nxn" path="res://assets/light_orb.png" id="7_x0sa1"]
[ext_resource type="AudioStream" uid="uid://bjosdnsm6fb7h" path="res://sounds/SFX/Pickup.ogg" id="9_epu25"]
[ext_resource type="PackedScene" uid="uid://dt2lsihteaegx" path="res://scenes/light.tscn" id="10_i4aws"]
[ext_resource type="PackedScene" path="res://scenes/Characters/spawnpoint.tscn" id="10_xfyi0"]
[ext_resource type="Texture2D" uid="uid://1thwudgk0sq7" path="res://assets/ingredients/berry.png" id="11_om1h3"]
[ext_resource type="PackedScene" uid="uid://cfc0erykqg0dd" path="res://scenes/UI/pause_menu.tscn" id="11_wad4f"]
[ext_resource type="Texture2D" uid="uid://cw8lejtt1cios" path="res://assets/ingredients/berry_n.png" id="12_2feej"]
[ext_resource type="Shader" path="res://shaders/rain.gdshader" id="15_2e3wr"]
[ext_resource type="Shader" path="res://shaders/godrays.gdshader" id="15_52j6s"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_mlonh"]
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_btse8"]
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r7s07"]
texture = ExtResource("3_nuk7a")
texture_region_size = Vector2i(64, 64)
4:0/0 = 0
4:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_mlonh")
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_btse8")
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
12:2/0 = 0
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0
12:7/0 = 0
12:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_8q7wt"]
tile_size = Vector2i(64, 64)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_r7s07")

[sub_resource type="CircleShape2D" id="CircleShape2D_k2s3n"]
radius = 8.06226

[sub_resource type="CanvasTexture" id="CanvasTexture_y2n1j"]
diffuse_texture = ExtResource("11_om1h3")
normal_texture = ExtResource("12_2feej")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_igg71"]
shader = ExtResource("15_52j6s")
shader_parameter/angle = -0.3
shader_parameter/position = -0.2
shader_parameter/spread = 0.372
shader_parameter/cutoff = 0.026
shader_parameter/falloff = 0.407
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 2.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.406
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8vmbv"]
shader = ExtResource("15_2e3wr")
shader_parameter/count = 300
shader_parameter/slant = 0.2
shader_parameter/speed = 50.0
shader_parameter/blur = 0.0015
shader_parameter/colour = Color(1, 1, 1, 1)
shader_parameter/size = Vector2(0.005, 0.2)

[node name="Main" type="Node2D"]
script = ExtResource("1_1j54n")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
modulate = Color(0.462745, 0.462745, 0.462745, 1)
light_mask = 2
tile_set = SubResource("TileSet_8q7wt")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(0, 786432, 6, 65536, 786432, 6, 131072, 786432, 6, 196608, 786432, 6, 262144, 786432, 6, 327680, 786432, 6, 393216, 786432, 6, 458752, 786432, 6, 524288, 786432, 6, 589824, 786432, 6, 1, 786432, 6, 65537, 786432, 6, 131073, 786432, 6, 196609, 786432, 6, 262145, 786432, 6, 327681, 786432, 6, 393217, 786432, 6, 458753, 786432, 6, 524289, 786432, 6, 589825, 786432, 6, 2, 786432, 6, 65538, 786432, 6, 131074, 786432, 6, 196610, 786432, 6, 262146, 786432, 6, 327682, 786432, 6, 393218, 786432, 6, 458754, 786432, 6, 524290, 786432, 6, 589826, 786432, 6, 3, 786432, 6, 65539, 786432, 6, 131075, 786432, 6, 196611, 786432, 6, 262147, 786432, 6, 327683, 786432, 6, 393219, 786432, 6, 458755, 786432, 6, 524291, 786432, 6, 589827, 786432, 6, 4, 786432, 6, 65540, 786432, 6, 131076, 786432, 6, 196612, 786432, 6, 262148, 786432, 6, 327684, 786432, 6, 393220, 786432, 6, 458756, 786432, 6, 524292, 786432, 6, 589828, 786432, 6, 5, 786432, 6, 65541, 786432, 6, 131077, 786432, 6, 196613, 786432, 6, 262149, 786432, 6, 327685, 786432, 6, 393221, 786432, 6, 458757, 786432, 6, 524293, 786432, 6, 589829, 786432, 6, 6, 786432, 6, 65542, 786432, 6, 131078, 786432, 6, 196614, 786432, 6, 262150, 786432, 6, 327686, 786432, 6, 393222, 786432, 6, 458758, 786432, 6, 524294, 786432, 6, 589830, 786432, 6, 7, 786432, 6, 65543, 786432, 6, 131079, 786432, 6, 196615, 786432, 6, 262151, 786432, 6, 327687, 786432, 6, 393223, 786432, 6, 458759, 786432, 6, 524295, 786432, 6, 589831, 786432, 6, 8, 786432, 6, 65544, 786432, 6, 131080, 786432, 6, 196616, 786432, 6, 262152, 786432, 6, 327688, 786432, 6, 393224, 786432, 6, 458760, 786432, 6, 524296, 786432, 6, 589832, 786432, 6, 9, 786432, 6, 65545, 786432, 6, 131081, 786432, 6, 196617, 786432, 6, 262153, 786432, 6, 327689, 786432, 6, 393225, 786432, 6, 458761, 786432, 6, 524297, 786432, 6, 589833, 786432, 6, 10, 786432, 6, 65546, 786432, 6, 131082, 786432, 6, 196618, 786432, 6, 262154, 786432, 6, 327690, 786432, 6, 393226, 786432, 6, 458762, 786432, 6, 524298, 786432, 6, 589834, 786432, 6, 11, 786432, 6, 65547, 786432, 6, 131083, 786432, 6, 196619, 786432, 6, 262155, 786432, 6, 327691, 786432, 6, 393227, 786432, 6, 458763, 786432, 6, 524299, 786432, 6, 589835, 786432, 6, 12, 786432, 6, 65548, 786432, 6, 131084, 786432, 6, 196620, 786432, 6, 262156, 786432, 6, 327692, 786432, 6, 393228, 786432, 6, 458764, 786432, 6, 524300, 786432, 6, 589836, 786432, 6, 13, 786432, 6, 65549, 786432, 6, 131085, 786432, 6, 196621, 786432, 6, 262157, 786432, 6, 327693, 786432, 6, 393229, 786432, 6, 458765, 786432, 6, 524301, 786432, 6, 589837, 786432, 6, 14, 786432, 6, 65550, 786432, 6, 131086, 786432, 6, 196622, 786432, 6, 262158, 786432, 6, 327694, 786432, 6, 393230, 786432, 6, 458766, 786432, 6, 524302, 786432, 6, 589838, 786432, 6, 15, 786432, 6, 65551, 786432, 6, 131087, 786432, 6, 196623, 786432, 6, 262159, 786432, 6, 327695, 786432, 6, 393231, 786432, 6, 458767, 786432, 6, 524303, 786432, 6, 589839, 786432, 6, 16, 786432, 6, 65552, 786432, 6, 131088, 786432, 6, 196624, 786432, 6, 262160, 786432, 6, 327696, 786432, 6, 393232, 786432, 6, 458768, 786432, 6, 524304, 786432, 6, 589840, 786432, 6, 17, 786432, 6, 65553, 786432, 6, 131089, 786432, 6, 196625, 786432, 6, 262161, 786432, 6, 327697, 786432, 6, 393233, 786432, 6, 458769, 786432, 6, 524305, 786432, 6, 589841, 786432, 6)
layer_1/name = "walls"
layer_1/tile_data = PackedInt32Array(0, 262144, 0, 1, 262144, 0, 2, 262144, 0, 3, 262144, 0, 4, 262144, 0, 5, 262144, 0, 6, 262144, 0, 7, 262144, 0, 8, 262144, 0, 9, 262144, 0, 10, 262144, 0, 11, 262144, 0, 12, 262144, 0, 13, 262144, 0, 14, 262144, 0, 15, 262144, 0, 16, 262144, 0, 17, 262144, 0, 65553, 262144, 0, 131089, 262144, 0, 196625, 262144, 0, 262161, 262144, 0, 327697, 262144, 0, 393233, 262144, 0, 458769, 262144, 0, 524305, 262144, 0, 589841, 262144, 0, 589824, 262144, 0, 589825, 262144, 0, 589826, 262144, 0, 589827, 262144, 0, 589828, 262144, 0, 589829, 262144, 0, 589830, 262144, 0, 589831, 262144, 0, 589832, 262144, 0, 589833, 262144, 0, 589834, 262144, 0, 589835, 262144, 0, 589836, 262144, 0, 589837, 262144, 0, 589838, 262144, 0, 589839, 262144, 0, 589840, 262144, 0, 65536, 262144, 0, 131072, 262144, 0, 196608, 262144, 0, 262144, 262144, 0, 327680, 262144, 0, 393216, 262144, 0, 458752, 262144, 0, 524288, 262144, 0, 65543, 262144, 0, 131079, 262144, 0, 196615, 262144, 0, 196616, 262144, 0, 196617, 262144, 0, 393221, 262144, 0, 393222, 262144, 0, 393223, 262144, 0, 393224, 262144, 0, 393225, 262144, 0, 458759, 262144, 0, 524295, 262144, 0, 262157, 262144, 0, 262158, 262144, 0, 262159, 262144, 0, 262160, 262144, 0)

[node name="Characters" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_tye71")

[node name="Player" parent="Characters" instance=ExtResource("2_ia34y")]
position = Vector2(96, 352)

[node name="Shadow" parent="Characters" instance=ExtResource("4_sx2i0")]
position = Vector2(96, 160)

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_4f632")
volume_db = -4.559
autoplay = true

[node name="MemoryItem" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(224, 416)
texture = ExtResource("7_x0sa1")

[node name="Area2D" type="Area2D" parent="MemoryItem"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MemoryItem/Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_k2s3n")

[node name="MemoryPickup" type="AudioStreamPlayer" parent="MemoryItem/Area2D"]
unique_name_in_owner = true
stream = ExtResource("9_epu25")
volume_db = -13.372
max_polyphony = 2

[node name="CurrentMemory" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_sijgh")

[node name="Light" parent="." instance=ExtResource("10_i4aws")]
position = Vector2(672, 417)

[node name="Berry" type="Sprite2D" parent="."]
position = Vector2(352, 352)
texture = SubResource("CanvasTexture_y2n1j")

[node name="Spawnpoint" parent="." instance=ExtResource("10_xfyi0")]
unique_name_in_owner = true
position = Vector2(96, 96)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 322)

[node name="PauseMenu" parent="Camera2D" instance=ExtResource("11_wad4f")]
visible = false
offset_left = 57.0
offset_top = 5.0
offset_right = 57.0
offset_bottom = 5.0

[node name="Godrays" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_igg71")
offset_left = -672.0
offset_top = -248.0
offset_right = -208.0
offset_bottom = 120.0

[node name="Rain" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8vmbv")
offset_left = -256.0
offset_top = -232.0
offset_right = 96.0
offset_bottom = -24.0
color = Color(1, 1, 1, 0)

[connection signal="area_entered" from="MemoryItem/Area2D" to="." method="_on_area_2d_area_entered"]
